# kraxn

./: .env  .gitignore  Cargo.toml  README.md  clean_db  index.html  push_docs  search-index.js
client/: Cargo.toml
client/src/: errors.rs  main.rs
implementors/error_chain/: trait.ChainedError.js
implementors/kraxn_client/: trait.ResultExt.js
implementors/kraxn_server/: trait.ResultExt.js
kraxn_client/: enum.ErrorKind.html  index.html  struct.Error.html  trait.ResultExt.html  type.Result.html
kraxn_server/: DataP.t.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.DataP.html  struct.Error.html  trait.ResultExt.html  type.Result.html
kraxn_web/: index.html  sidebar-items.js  static.static_rocket_catch_info_for_not_found.html  static.static_rocket_route_info_for_d3.html  static.static_rocket_route_info_for_d3_line.html  static.static_rocket_route_info_for_hello.html  static.static_rocket_route_info_for_index.html  static.static_rocket_route_info_for_js_files.html  static.static_rocket_route_info_for_plot_data.html  static.static_rocket_route_info_for_submit.html  static_rocket_route_info_for_d3.v.html  static_rocket_route_info_for_d3_line.v.html  static_rocket_route_info_for_hello.v.html  static_rocket_route_info_for_js_files.v.html  static_rocket_route_info_for_plot_data.v.html
migrations/2018-02-14-134552_create_posts/: up.sql
migrations/2018-02-15-182955_datasets/: down.sql  up.sql
server/: Cargo.toml
server/src/: errors.rs  main.rs
src/kraxn_client/: errors.rs.html  main.rs.html
web/: Cargo.toml  Rocket.toml
web/js/: barchart.js  (+2 more)
(+21 files in other folders)
