[package]
name = "kraxn"
version = "0.0.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "WIP"
documentation = "https://stefan-k.github.io/kraxn/kraxn/"
homepage = "https://github.com/stefan-k/kraxn"
repository = "https://github.com/stefan-k/kraxn"
readme = "README.md"
keywords = ["science", "HPC"]
categories = ["science"]
#license-file = "LICENSE-APACHE"
exclude = [ 
	".travis.yml",
	"push_docs",
]

[[bin]]
name = "kraxn-server"
path = "server/src/main.rs"

[[bin]]
name = "kraxn-client"
path = "client/src/main.rs"

[[bin]]
name = "kraxn-web"
path = "web/src/main.rs"

[dependencies]
clippy = {version = "*", optional = true}
tokio = "*"
tokio-io = "*"
futures = "*"
error-chain = "*"
tokio-core = "*"
tokio-serde-json = { git = "https://github.com/carllerche/tokio-serde-json" }
serde = "*"
serde_json = "*"
serde_derive = "*"
diesel = { version = "1.1.1", features = ["postgres"] }
dotenv = "0.10.1"
rocket = "*"
rocket_codegen = "*"

[workspace]
members = ["server", "client", "web"]
